--- a/src/app/pages/admin-flight-management/admin-flight-management.component.scss
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.scss
@@ -9,67 +9,12 @@
     display: flex;
     flex-direction: row;
 }
-.menu-bar {
-    /* width: 20%; */
-    /* display: block; */
-    /* flex: 1; */
-    position: relative;
-    display: inline-block;
-    background-color: #146C94;
-    min-height: 100vh;
-    align-items: center;
-    padding: 20px;
-    overflow: auto;
-}
 .page-content {
     width: 100%;
     display: inline-block;
     position: relative;
     padding: 30px;
 }
-.menu-button-list {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 100%;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-.menu-button {
-    margin: auto;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    width: 100%;
-    white-space: nowrap;
-    border: 2px;
-    border-radius: 15px;
-    padding: 5px;
-    background-color: #146C94;
-    color:white;
-    font-weight: bold;
-}
-.logo {
-    display: flex;
-    justify-content: space-evenly;
-}
-.logo-image {
-    vertical-align: middle;
-}
-
-.menu-button:hover {
-    background-color: #869ba5;
-}
-
-.homepage {
-    background-color: #146C94;
-    border: none;
-    color: white;
-}
-
 .page-title {
     text-align: center;
     white-space: nowrap;
@@ -148,7 +93,7 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none; /* Remove default arrow */
-    background-image: url('../../assets/Icon/select-arrow.png'); /* Add custom arrow */
+    background-image: url('../../../assets/Icon/select-arrow.png'); /* Add custom arrow */
     background-repeat: no-repeat;
     background-position: right;
     background-size: .65em auto, 100%;
@@ -201,32 +146,57 @@
     /* float:right; */
     /* justify-content: space-between; */
 }
-.flight-detail-table {
-    display: flex;
-    /* justify-content: center; */
+// .flight-detail-table {
+//     display: flex;
+//     /* justify-content: center; */
+// }
+// table {
+//     width: 85%;
+//     /* display: flex; */
+//     table-layout: fixed;
+//     border-collapse: collapse;
+//     /* background-color: #262626; */
+//     color: white;
+// }
+// th {
+//     vertical-align: top;
+//     text-align: center;
+// }
+// th, td {
+//     /* width: 10%; */
+//     border: 1px solid white;
+//     background-color: #262626;
+//     /* border-collapse: collapse; */
+// }
+// /* table, th, td {
+//     border: 1px solid black;
+//     border-collapse: collapse;
+// } */
+// .flight-detail-edit-delete {
+//     width: 15%;
+// }
+
+
+
+.demo-table {
+    width: 100%;
 }
-table {
-    width: 85%;
-    /* display: flex; */
-    table-layout: fixed;
-    border-collapse: collapse;
-    /* background-color: #262626; */
-    color: white;
-}
-th {
-    vertical-align: top;
+.mat-column-demo-position {
+    width: 32px;
+    border-right: 1px solid currentColor;
+    padding-right: 24px;
     text-align: center;
 }
-th, td {
-    /* width: 10%; */
-    border: 1px solid white;
-    background-color: #262626;
-    /* border-collapse: collapse; */
+.mat-column-demo-name {
+    padding-left: 16px;
+    font-size: 20px;
 }
-/* table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-} */
-.flight-detail-edit-delete {
-    width: 15%;
+.mat-column-demo-weight {
+    font-style: italic;
 }
+.mat-column-demo-symbol {
+    width: 32px;
+    text-align: center;
+    font-weight: bold;
+}
+  
