--- a/src/app/pages/admin-flight-management/admin-flight-management.component.scss
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.scss
@@ -8,12 +8,15 @@
 .container {
     display: flex;
     flex-direction: row;
+    overflow: hidden
 }
 .page-content {
     width: 100%;
     display: inline-block;
     position: relative;
     padding: 30px;
+    margin: 20px;
+    
 }
 .page-title {
     text-align: center;
