change nav to fixed

--- a/src/app/components/admin-navigation/admin-navigation.component.scss
+++ b/src/app/components/admin-navigation/admin-navigation.component.scss
@@ -9,7 +9,7 @@
     /* width: 20%; */
     /* display: block; */
     /* flex: 1; */
-    position: relative;
+    position: fixed;
     display: inline-block;
     background-color: #146C94;
     min-height: 100%;
