--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-    <app-admin-navigation></app-admin-navigation>
+    <div class="admin-nav">
+        <app-admin-navigation></app-admin-navigation>
+    </div>
     <div class="page-content">
         <div class="page-title">
             QUẢN LÝ CHUYẾN BAY
@@ -43,6 +45,12 @@
                 </div>
                 
             </div>
+
+
+
+
+
+            
             <!-- <div class="flight-detail-table">
                 <table>
                     <tr>
@@ -65,25 +73,21 @@
                 </div>
             </div> -->
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-                <!-- Position Column -->
                 <ng-container matColumnDef="demo-position">
                   <th mat-header-cell *matHeaderCellDef> No. </th>
                   <td mat-cell *matCellDef="let element"> {{element.position}} </td>
                 </ng-container>
               
-                <!-- Name Column -->
                 <ng-container matColumnDef="demo-name">
                   <th mat-header-cell *matHeaderCellDef> Name </th>
                   <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                 </ng-container>
               
-                <!-- Weight Column -->
                 <ng-container matColumnDef="demo-weight">
                   <th mat-header-cell *matHeaderCellDef> Weight </th>
                   <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
                 </ng-container>
               
-                <!-- Symbol Column -->
                 <ng-container matColumnDef="demo-symbol">
                   <th mat-header-cell *matHeaderCellDef> Symbol </th>
                   <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
