--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -73,29 +73,90 @@
                 </div>
             </div> -->
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-                <ng-container matColumnDef="demo-position">
-                  <th mat-header-cell *matHeaderCellDef> No. </th>
-                  <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+              <!-- <ng-container matColumnDef="demo-position">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+              </ng-container>
+            
+              <ng-container matColumnDef="demo-name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+              </ng-container>
+            
+              <ng-container matColumnDef="demo-weight">
+                <th mat-header-cell *matHeaderCellDef> Weight </th>
+                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+              </ng-container>
+            
+              <ng-container matColumnDef="demo-symbol">
+                <th mat-header-cell *matHeaderCellDef> Symbol </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+              </ng-container> -->
+
+              <!-- id_flight: string;
+id_plane: string;
+name_plane: string;
+departure_location: string;
+arrival_location: string;
+departure_date: string;
+flight_time: string;
+BSN_seats: number;
+ECO_seats: number;
+price: number; -->
+
+              <ng-container matColumnDef="id_flight">
+                  <th mat-header-cell *matHeaderCellDef> Mã chuyến </th>
+                  <td mat-cell *matCellDef="let element"> {{element.id_flight}} </td>
                 </ng-container>
               
-                <ng-container matColumnDef="demo-name">
-                  <th mat-header-cell *matHeaderCellDef> Name </th>
-                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                <ng-container matColumnDef="id_plane">
+                  <th mat-header-cell *matHeaderCellDef> Mã máy bay </th>
+                  <td mat-cell *matCellDef="let element"> {{element.id_plane}} </td>
                 </ng-container>
               
-                <ng-container matColumnDef="demo-weight">
-                  <th mat-header-cell *matHeaderCellDef> Weight </th>
-                  <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+                <ng-container matColumnDef="name_plane">
+                  <th mat-header-cell *matHeaderCellDef> Tên máy bay </th>
+                  <td mat-cell *matCellDef="let element"> {{element.name_plane}} </td>
                 </ng-container>
               
-                <ng-container matColumnDef="demo-symbol">
-                  <th mat-header-cell *matHeaderCellDef> Symbol </th>
-                  <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+                <ng-container matColumnDef="departure_location">
+                  <th mat-header-cell *matHeaderCellDef> Địa điểm xuất phát </th>
+                  <td mat-cell *matCellDef="let element"> {{element.departure_location}} </td>
                 </ng-container>
-              
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
+
+                <ng-container matColumnDef="arrival_location">
+                  <th mat-header-cell *matHeaderCellDef> Địa điểm hạ cánh </th>
+                  <td mat-cell *matCellDef="let element"> {{element.arrival_location}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="departure_date">
+                  <th mat-header-cell *matHeaderCellDef> Ngày xuất phát </th>
+                  <td mat-cell *matCellDef="let element"> {{element.departure_date}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="flight_time">
+                  <th mat-header-cell *matHeaderCellDef> Giờ bay </th>
+                  <td mat-cell *matCellDef="let element"> {{element.flight_time}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="BSN_seats">
+                  <th mat-header-cell *matHeaderCellDef> Số lượng ghế BSN </th>
+                  <td mat-cell *matCellDef="let element"> {{element.BSN_seats}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="ECO_seats">
+                  <th mat-header-cell *matHeaderCellDef> Số lượng ghế ECO </th>
+                  <td mat-cell *matCellDef="let element"> {{element.ECO_seats}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="price">
+                  <th mat-header-cell *matHeaderCellDef> Giá </th>
+                  <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+                </ng-container>
+            
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
               
               
     </div>
