--- a/src/app/components/admin-navigation/admin-navigation.component.html
+++ b/src/app/components/admin-navigation/admin-navigation.component.html
@@ -1,6 +1,6 @@
 <div class="menu-bar">
     <div class="logo">
-        <img src="../../../assets/Icon/icons8-plane-material-rounded (1)/icons8-plane-48.png" alt="logo" class="logo-image">
+        <img src="assets/Icon/icons8-plane-material-rounded (1)/icons8-plane-48.png" alt="logo" class="logo-image">
         <button class="homepage">
             <p style="margin: 0;">FLIGHTDOT</p>
             <p style="margin: 0;">ADMIN</p>
