--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -9,7 +9,7 @@
             <button class="add-flight">Thêm chuyến bay</button>
             <div class="flight-filter-form">
                 <form>
-                    <div class="form-section">
+                    <div class="form-field">
                         <label for="departure-location">Nơi xuất phát:</label><br>
                         <select name="arrival-location" id="arrival-location">
                             <option value=""></option>
@@ -20,10 +20,10 @@
                             <option value="TPHCM5">TPHCM5</option>
                         </select>
                     </div>
-                    <div class="form-section">
+                    <div class="form-field">
                         <label for="departure-date">Ngày xuất phát:</label><br>
                         <input type="date" id="departure-date" name="departure-date" class="datepicker-box"><br></div>
-                    <div class="form-section">
+                    <div class="form-field">
                         <label for="arrival-location">Nơi đến:</label><br>
                         <select name="arrival-location" id="arrival-location">
                             <option value=""></option>
@@ -34,7 +34,7 @@
                             <option value="TPHCM5">TPHCM5</option>
                         </select>
                     </div>
-                    <div class="form-section" style="justify-content: right;">
+                    <div class="form-field" style="justify-content: right;">
                         <button type="submit">Lọc</button>
                     </div>
                 </form>
@@ -45,65 +45,7 @@
                 </div>
                 
             </div>
-
-
-
-
-
-            
-            <!-- <div class="flight-detail-table">
-                <table>
-                    <tr>
-                        <th>Mã chuyến</th>
-                        <th>Mã máy bay</th>
-                        <th>Tên máy bay</th>
-                        <th>Nơi đi</th>
-                        <th>Nơi đến</th>
-                        <th>Ngày xuất phát</th>
-                        <th>Giờ bay</th>
-                        <th>SL BSN đặt</th>
-                        <th>SL ECO đặt</th>
-                        <th>Giá</th>
-                        
-                    </tr>
-                </table>
-                <div class="flight-detail-edit-delete">
-                    <button>delete</button>
-                    
-                </div>
-            </div> -->
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
-              <!-- <ng-container matColumnDef="demo-position">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-              </ng-container>
-            
-              <ng-container matColumnDef="demo-name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-              </ng-container>
-            
-              <ng-container matColumnDef="demo-weight">
-                <th mat-header-cell *matHeaderCellDef> Weight </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-              </ng-container>
-            
-              <ng-container matColumnDef="demo-symbol">
-                <th mat-header-cell *matHeaderCellDef> Symbol </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-              </ng-container> -->
-
-              <!-- id_flight: string;
-id_plane: string;
-name_plane: string;
-departure_location: string;
-arrival_location: string;
-departure_date: string;
-flight_time: string;
-BSN_seats: number;
-ECO_seats: number;
-price: number; -->
-
               <ng-container matColumnDef="id_flight">
                   <th mat-header-cell *matHeaderCellDef> Mã chuyến </th>
                   <td mat-cell *matCellDef="let element"> {{element.id_flight}} </td>
