--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- <app-admin-flight-management></app-admin-flight-management> -->
 
-<app-admin-ticket-management></app-admin-ticket-management>
+<app-admin-dashboard></app-admin-dashboard>
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-admin-navigation></app-admin-navigation> -->
