--- a/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,8 @@
-<p>admin-dashboard works!</p>
+<div class="container">
+    <div class="admin-nav">
+        <app-admin-navigation></app-admin-navigation>
+    </div>
+    <div class="page-content">
+        <router-outlet></router-outlet>
+    </div>
+</div>
