--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<!-- <div class="container">
     <div class="admin-nav">
         <app-admin-navigation></app-admin-navigation>
     </div>
-    <div class="page-content">
+    <div class="page-content"> -->
         <div class="page-title">
             QUẢN LÝ VÉ KHÁCH
         </div>
@@ -138,5 +138,5 @@
             </div>
             
               
-    </div>
-</div>
+    <!-- </div>
+</div> -->
