--- a/src/app/components/admin-ticket-management/admin-ticket-management.component.html
+++ b/src/app/components/admin-ticket-management/admin-ticket-management.component.html
@@ -66,59 +66,54 @@
             </div>
             <div class="flight-data-table">
               <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 flight-table">
-                <ng-container matColumnDef="id_flight">
+                <ng-container matColumnDef="ticket_id">
+                    <th mat-header-cell *matHeaderCellDef> Mã vé </th>
+                    <td mat-cell *matCellDef="let element"> {{element.ticket_id}} </td>
+                  </ng-container>
+                
+                  <ng-container matColumnDef="booking_date">
+                    <th mat-header-cell *matHeaderCellDef> Ngày đặt vé </th>
+                    <td mat-cell *matCellDef="let element"> {{element.booking_date}} </td>
+                  </ng-container>
+                
+                  <ng-container matColumnDef="customer_id">
+                    <th mat-header-cell *matHeaderCellDef> Mã khách hàng </th>
+                    <td mat-cell *matCellDef="let element"> {{element.customer_id}} </td>
+                  </ng-container>
+                
+                  <ng-container matColumnDef="customer_name">
+                    <th mat-header-cell *matHeaderCellDef> Tên khách hàng </th>
+                    <td mat-cell *matCellDef="let element"> {{element.customer_name}} </td>
+                  </ng-container>
+  
+                  <ng-container matColumnDef="flight_id">
                     <th mat-header-cell *matHeaderCellDef> Mã chuyến </th>
-                    <td mat-cell *matCellDef="let element"> {{element.id_flight}} </td>
-                  </ng-container>
-                
-                  <ng-container matColumnDef="id_plane">
-                    <th mat-header-cell *matHeaderCellDef> Mã máy bay </th>
-                    <td mat-cell *matCellDef="let element"> {{element.id_plane}} </td>
-                  </ng-container>
-                
-                  <ng-container matColumnDef="name_plane">
-                    <th mat-header-cell *matHeaderCellDef> Tên máy bay </th>
-                    <td mat-cell *matCellDef="let element"> {{element.name_plane}} </td>
-                  </ng-container>
-                
-                  <ng-container matColumnDef="departure_location">
-                    <th mat-header-cell *matHeaderCellDef> Địa điểm xuất phát </th>
-                    <td mat-cell *matCellDef="let element"> {{element.departure_location}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.flight_id}} </td>
                   </ng-container>
   
-                  <ng-container matColumnDef="arrival_location">
-                    <th mat-header-cell *matHeaderCellDef> Địa điểm hạ cánh </th>
-                    <td mat-cell *matCellDef="let element"> {{element.arrival_location}} </td>
+                  <ng-container matColumnDef="seat_type">
+                    <th mat-header-cell *matHeaderCellDef> Loại vé </th>
+                    <td mat-cell *matCellDef="let element"> {{element.seat_type}} </td>
                   </ng-container>
   
-                  <ng-container matColumnDef="departure_date">
-                    <th mat-header-cell *matHeaderCellDef> Ngày xuất phát </th>
-                    <td mat-cell *matCellDef="let element"> {{element.departure_date}} </td>
-                  </ng-container>
-  
-                  <ng-container matColumnDef="flight_time">
-                    <th mat-header-cell *matHeaderCellDef> Giờ bay </th>
-                    <td mat-cell *matCellDef="let element"> {{element.flight_time}} </td>
-                  </ng-container>
-  
-                  <ng-container matColumnDef="BSN_seats">
-                    <th mat-header-cell *matHeaderCellDef> Số lượng ghế BSN </th>
-                    <td mat-cell *matCellDef="let element"> {{element.BSN_seats}} </td>
-                  </ng-container>
-  
-                  <ng-container matColumnDef="ECO_seats">
-                    <th mat-header-cell *matHeaderCellDef> Số lượng ghế ECO </th>
-                    <td mat-cell *matCellDef="let element"> {{element.ECO_seats}} </td>
+                  <ng-container matColumnDef="quantity">
+                    <th mat-header-cell *matHeaderCellDef> Số lượng </th>
+                    <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
                   </ng-container>
   
                   <ng-container matColumnDef="price">
                     <th mat-header-cell *matHeaderCellDef> Giá </th>
                     <td mat-cell *matCellDef="let element"> {{element.price}} </td>
                   </ng-container>
-
-                  <ng-container matColumnDef="edit">
+  
+                  <ng-container matColumnDef="approve">
                     <th mat-header-cell *matHeaderCellDef> </th>
-                    <td mat-cell *matCellDef="let element"> Sửa </td>
+                    <td mat-cell *matCellDef="let element"> Duyệt </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="cancel">
+                    <th mat-header-cell *matHeaderCellDef> </th>
+                    <td mat-cell *matCellDef="let element"> Hủy </td>
                   </ng-container>
 
                   <ng-container matColumnDef="delete">
