--- a/src/app/components/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/components/admin-flight-management/admin-flight-management.component.html
@@ -46,73 +46,83 @@
                 
             </div>
             <div class="flight-data-table">
-              <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 flight-table">
-                <ng-container matColumnDef="flight_id">
-                    <th mat-header-cell *matHeaderCellDef> Mã chuyến </th>
-                    <td mat-cell *matCellDef="let element"> {{element.flight_id}} </td>
-                  </ng-container>
+              <div class="table-container">
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 flight-table">
+                  <ng-container matColumnDef="flight_id">
+                      <th mat-header-cell *matHeaderCellDef> Mã chuyến </th>
+                      <td mat-cell *matCellDef="let element"> {{element.flight_id}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="plane_id">
+                      <th mat-header-cell *matHeaderCellDef> Mã máy bay </th>
+                      <td mat-cell *matCellDef="let element"> {{element.plane_id}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="plane_name">
+                      <th mat-header-cell *matHeaderCellDef> Tên máy bay </th>
+                      <td mat-cell *matCellDef="let element"> {{element.plane_name}} </td>
+                    </ng-container>
+                  
+                    <ng-container matColumnDef="departure_location">
+                      <th mat-header-cell *matHeaderCellDef> Địa điểm <br>
+                        xuất phát </th>
+                      <td mat-cell *matCellDef="let element"> {{element.departure_location}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="arrival_location">
+                      <th mat-header-cell *matHeaderCellDef> Địa điểm<br>hạ cánh </th>
+                      <td mat-cell *matCellDef="let element"> {{element.arrival_location}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="departure_date">
+                      <th mat-header-cell *matHeaderCellDef> Ngày xuất phát </th>
+                      <td mat-cell *matCellDef="let element"> {{element.departure_date}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="flight_time">
+                      <th mat-header-cell *matHeaderCellDef> Giờ bay </th>
+                      <td mat-cell *matCellDef="let element"> {{element.flight_time}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="BSN_seats">
+                      <th mat-header-cell *matHeaderCellDef> Số lượng ghế<br> BSN </th>
+                      <td mat-cell *matCellDef="let element"> {{element.BSN_seats}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="ECO_seats">
+                      <th mat-header-cell *matHeaderCellDef> Số lượng ghế <br> ECO </th>
+                      <td mat-cell *matCellDef="let element"> {{element.ECO_seats}} </td>
+                    </ng-container>
+    
+                    <ng-container matColumnDef="price">
+                      <th mat-header-cell *matHeaderCellDef> Giá </th>
+                      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+                    </ng-container>
+  
+                    <ng-container matColumnDef="edit">
+                      <th mat-header-cell *matHeaderCellDef> </th>
+                      <td mat-cell *matCellDef="let element"> <button>Sửa</button> </td>
+                    </ng-container>
+  
+                    <ng-container matColumnDef="delete">
+                      <th mat-header-cell *matHeaderCellDef> </th>
+                      <td mat-cell *matCellDef="let element"> <button>Xóa</button> </td>
+                    </ng-container>
                 
-                  <ng-container matColumnDef="plane_id">
-                    <th mat-header-cell *matHeaderCellDef> Mã máy bay </th>
-                    <td mat-cell *matCellDef="let element"> {{element.plane_id}} </td>
-                  </ng-container>
-                
-                  <ng-container matColumnDef="plane_name">
-                    <th mat-header-cell *matHeaderCellDef> Tên máy bay </th>
-                    <td mat-cell *matCellDef="let element"> {{element.plane_name}} </td>
-                  </ng-container>
-                
-                  <ng-container matColumnDef="departure_location">
-                    <th mat-header-cell *matHeaderCellDef> Địa điểm xuất phát </th>
-                    <td mat-cell *matCellDef="let element"> {{element.departure_location}} </td>
-                  </ng-container>
-  
-                  <ng-container matColumnDef="arrival_location">
-                    <th mat-header-cell *matHeaderCellDef> Địa điểm hạ cánh </th>
-                    <td mat-cell *matCellDef="let element"> {{element.arrival_location}} </td>
-                  </ng-container>
-  
-                  <ng-container matColumnDef="departure_date">
-                    <th mat-header-cell *matHeaderCellDef> Ngày xuất phát </th>
-                    <td mat-cell *matCellDef="let element"> {{element.departure_date}} </td>
-                  </ng-container>
-  
-                  <ng-container matColumnDef="flight_time">
-                    <th mat-header-cell *matHeaderCellDef> Giờ bay </th>
-                    <td mat-cell *matCellDef="let element"> {{element.flight_time}} </td>
-                  </ng-container>
-  
-                  <ng-container matColumnDef="BSN_seats">
-                    <th mat-header-cell *matHeaderCellDef> Số lượng ghế BSN </th>
-                    <td mat-cell *matCellDef="let element"> {{element.BSN_seats}} </td>
-                  </ng-container>
-  
-                  <ng-container matColumnDef="ECO_seats">
-                    <th mat-header-cell *matHeaderCellDef> Số lượng ghế ECO </th>
-                    <td mat-cell *matCellDef="let element"> {{element.ECO_seats}} </td>
-                  </ng-container>
-  
-                  <ng-container matColumnDef="price">
-                    <th mat-header-cell *matHeaderCellDef> Giá </th>
-                    <td mat-cell *matCellDef="let element"> {{element.price}} </td>
-                  </ng-container>
-
-                  <ng-container matColumnDef="edit">
-                    <th mat-header-cell *matHeaderCellDef> </th>
-                    <td mat-cell *matCellDef="let element"> Sửa </td>
-                  </ng-container>
-
-                  <ng-container matColumnDef="delete">
-                    <th mat-header-cell *matHeaderCellDef> </th>
-                    <td mat-cell *matCellDef="let element"> Xóa </td>
-                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+              </div>
               
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-              </table>
-              <mat-paginator pageSize="10" hidePageSize="true"
-                showFirstLastButtons>
-              </mat-paginator>
+
+
+              <div class="paginator-container">
+                <mat-paginator pageSize="10" hidePageSize="true"
+                  showFirstLastButtons>
+                </mat-paginator>
+              </div>
+
+              
             </div>
             
               
