--- a/src/app/components/admin-ticket-management/admin-ticket-management.component.scss
+++ b/src/app/components/admin-ticket-management/admin-ticket-management.component.scss
@@ -187,20 +187,29 @@
     cursor: pointer;
 }
 .flight-data-table {
-    border: 3px solid #146C94;
-    // padding-top: 5px;
     display: flex;
     flex-direction: column;
-    border-radius: 10px;
-    // width: 1100px;
+    align-items: center;
+}
+.table-container {
+    display: flex;
+    width: 1000px;
     overflow-x: auto;
+    border-style: solid;
+    border-color: #146C94;
+    border-width: 3px 3px 3px 3px;
+    border-radius: 10px 10px 0px 0px;
+    background-color: #146C94;
+}
+.paginator-container {
+    display: flex;
 }
 .flight-table {
     width: 100%;
     justify-content: center;
     background-color: white;
     color: black;
-    // text-wrap: nowrap;
+    text-wrap: nowrap;
 }
 .mat-column-ticket_id,
 .mat-column-booking_date,
@@ -220,12 +229,26 @@
 .mat-table {
     overflow-x: scroll;
     color: black;
-    position: sticky
+    text-wrap: nowrap;
 }
-// .mat-header-cell th {
-//     background-color: #146C94;
-//     color: white;
-// }
+td button {
+    background-color: #19A7CE;
+    border: none;
+    color: white;
+    width: 50px;
+    padding: 5px;
+    border-radius: 10px;
+    transition: 0.3s;
+}
+td button:hover {
+    background-color: white;
+    border: 1px solid #19A7CE;
+    color: #19A7CE;
+    cursor: pointer;
+    width: 50px;
+    padding: 5px;
+    border-radius: 10px;
+}
 .flight-table {
     th {
         background-color: #146C94;
@@ -235,23 +258,10 @@
 .mat-row,
 .mat-header-row {
     min-width: 800px;
-    // text-wrap: nowrap;
 }
 mat-paginator {
     background-color: #146C94;
     color: white;
-    & mat-select {
-        background-color: #146C94;
-    }
-    width: 100%;
+    width: 1000px;
+    flex-shrink: 0;
 }
-mat-paginator select option {
-    background-color: #146C94;
-}
-// mat-paginator {
-//     display: flex;
-//     justify-content: left;
-// } 
-// .mat-select-panel {
-//     background-color: blue;
-// }
