--- a/src/app/components/admin-ticket-management/admin-ticket-management.component.scss
+++ b/src/app/components/admin-ticket-management/admin-ticket-management.component.scss
@@ -56,7 +56,7 @@
 }
 .flight-filter-form form {
     display: flex;
-    width: 100%;
+    // width: 100%;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
@@ -74,13 +74,13 @@
     padding: 10px;
 }
 .form-field label {
-    width: 30%;
+    width: 40%;
     align-self: center;
     color: #146C94;
     font-weight: bold;
 }
 .form-field input {
-    width: 70%;
+    width: 60%;
     align-self: center;
     height: auto;
     padding: 5px;
@@ -90,7 +90,7 @@
 }
 
 .form-field select {
-    flex: 70%;
+    flex: 60%;
     align-self: center;
     height: auto;
 
@@ -209,7 +209,7 @@
     justify-content: center;
     background-color: white;
     color: black;
-    text-wrap: nowrap;
+    text-wrap: wrap;
 }
 .mat-column-ticket_id,
 .mat-column-booking_date,
