--- a/src/app/components/admin-flight-management/admin-flight-management.component.scss
+++ b/src/app/components/admin-flight-management/admin-flight-management.component.scss
@@ -55,7 +55,7 @@
 }
 .flight-filter-form form {
     display: flex;
-    width: 100%;
+    // width: 100%;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
@@ -189,7 +189,7 @@
     justify-content: center;
     background-color: white;
     color: black;
-    text-wrap: nowrap;
+    // text-wrap: nowrap;
 }
 .mat-column-flight_id,
 .mat-column-plane_id,
