--- a/src/app/pages/admin-flight-management/admin-flight-management.component.html
+++ b/src/app/pages/admin-flight-management/admin-flight-management.component.html
@@ -10,7 +10,7 @@
             <div class="flight-filter-form">
                 <form>
                     <div class="form-field">
-                        <label for="departure-location">Nơi xuất phát:</label><br>
+                        <label for="departure-location">Nơi xuất phát</label><br>
                         <select name="arrival-location" id="arrival-location">
                             <option value=""></option>
                             <option value="TPHCM">TPHCM</option>
@@ -21,10 +21,10 @@
                         </select>
                     </div>
                     <div class="form-field">
-                        <label for="departure-date">Ngày xuất phát:</label><br>
+                        <label for="departure-date">Ngày xuất phát</label><br>
                         <input type="date" id="departure-date" name="departure-date" class="datepicker-box"><br></div>
                     <div class="form-field">
-                        <label for="arrival-location">Nơi đến:</label><br>
+                        <label for="arrival-location">Nơi đến</label><br>
                         <select name="arrival-location" id="arrival-location">
                             <option value=""></option>
                             <option value="TPHCM">TPHCM</option>
@@ -64,13 +64,12 @@
                     </ng-container>
                   
                     <ng-container matColumnDef="departure_location">
-                      <th mat-header-cell *matHeaderCellDef> Địa điểm <br>
-                        xuất phát </th>
+                      <th mat-header-cell *matHeaderCellDef> Nơi xuất phát </th>
                       <td mat-cell *matCellDef="let element"> {{element.departure_location}} </td>
                     </ng-container>
     
                     <ng-container matColumnDef="arrival_location">
-                      <th mat-header-cell *matHeaderCellDef> Địa điểm<br>hạ cánh </th>
+                      <th mat-header-cell *matHeaderCellDef> Nơi hạ cánh </th>
                       <td mat-cell *matCellDef="let element"> {{element.arrival_location}} </td>
                     </ng-container>
     
@@ -85,12 +84,12 @@
                     </ng-container>
     
                     <ng-container matColumnDef="BSN_seats">
-                      <th mat-header-cell *matHeaderCellDef> Số lượng ghế<br> BSN </th>
+                      <th mat-header-cell *matHeaderCellDef> Số ghế<br> BSN </th>
                       <td mat-cell *matCellDef="let element"> {{element.BSN_seats}} </td>
                     </ng-container>
     
                     <ng-container matColumnDef="ECO_seats">
-                      <th mat-header-cell *matHeaderCellDef> Số lượng ghế <br> ECO </th>
+                      <th mat-header-cell *matHeaderCellDef> Số ghế <br> ECO </th>
                       <td mat-cell *matCellDef="let element"> {{element.ECO_seats}} </td>
                     </ng-container>
     
@@ -101,7 +100,7 @@
   
                     <ng-container matColumnDef="edit">
                       <th mat-header-cell *matHeaderCellDef> </th>
-                      <td mat-cell *matCellDef="let element"> <button>Sửa</button> </td>
+                      <td mat-cell *matCellDef="let element"> <button routerLink="/admin-dashboard/edit-flight" routerLinkActive="active">Sửa</button> </td>
                     </ng-container>
   
                     <ng-container matColumnDef="delete">
