--- a/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
+++ b/src/app/pages/admin-ticket-management/admin-ticket-management.component.scss
@@ -27,26 +27,7 @@
     margin-bottom: 30px;
 }
 
-.add-flight {
-    float: right;
-    white-space: nowrap;
-    border: none;
-    color:white;
-    border-radius: 10px;
-    width: 150px;
-    height: 30px;
-    background-color: #19A7CE;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    transition: 0.3s;
-}
-.add-flight:hover {
-    background-color: transparent;
-    color: #19A7CE;
-    border: 1px solid #19A7CE;
-    cursor: pointer;
-}
-.flight-filter-form {
+.ticket-filter-form {
     margin:auto;
     
     align-items: center;
@@ -54,7 +35,7 @@
     display: flex;
     flex-direction: column;
 }
-.flight-filter-form form {
+.ticket-filter-form form {
     display: flex;
     // width: 100%;
     justify-content: center;
@@ -186,23 +167,25 @@
     border: 1px solid #19A7CE;
     cursor: pointer;
 }
-.flight-data-table {
+.ticket-data-table {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .table-container {
     display: flex;
-    width: 1000px;
+    width: 100%;
     overflow-x: auto;
     border-style: solid;
     border-color: #146C94;
     border-width: 3px 3px 3px 3px;
     border-radius: 10px 10px 0px 0px;
     background-color: #146C94;
+    white-space: nowrap;
 }
 .paginator-container {
     display: flex;
+    width: 100%;
 }
 .flight-table {
     width: 100%;
@@ -210,6 +193,8 @@
     background-color: white;
     color: black;
     text-wrap: wrap;
+    min-width: 1000px;
+    overflow-x: auto;
 }
 .mat-column-ticket_id,
 .mat-column-booking_date,
@@ -255,13 +240,9 @@ td button:hover {
         color: white;
     }
 }
-.mat-row,
-.mat-header-row {
-    min-width: 800px;
-}
 mat-paginator {
     background-color: #146C94;
     color: white;
-    width: 1000px;
+    width: 100%;
     flex-shrink: 0;
 }
