--- a/src/app/components/admin-navigation/admin-navigation.component.scss
+++ b/src/app/components/admin-navigation/admin-navigation.component.scss
@@ -1,72 +1,80 @@
-// * {
-//     margin: 0;
-//     padding: 0;
-//     box-sizing: border-box;
-//     text-decoration: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
     
-// }
-// .menu-bar {
-//     /* width: 20%; */
-//     /* display: block; */
-//     /* flex: 1; */
-//     position: fixed;
-//     display: inline-block;
-//     background-color: #146C94;
-//     min-height: 100%;
-//     align-items: center;
-//     padding: 20px;
-//     overflow: auto;
-//     .menu-button-list {
-//         display: flex;
-//         flex-direction: column;
-//         justify-content: space-around;
-//         width: 100%;
-//         margin: 0;
-//         position: absolute;
-//         top: 50%;
-//         left: 50%;
-//         -ms-transform: translate(-50%, -50%);
-//         transform: translate(-50%, -50%);
-//     }
-//     .menu-button {
-//         margin: auto;
-//         margin-top: 15px;
-//         margin-bottom: 15px;
-//         width: 100%;
-//         white-space: nowrap;
-//         border: 2px;
-//         border-radius: 5px;
-//         padding: 10px;
-//         background-color: #146C94;
-//         color:white;
-//         font-weight: bold;
-//         transition: 0.3s;
-//     }
-//     .logo {
-//         display: flex;
-//         justify-content: space-evenly;
-//     }
-//     .logo:hover {
-//         cursor: pointer;
-//     }
-//     .logo-image {
-//         vertical-align: middle;
-//     }
+}
+.menu-bar {
+    /* width: 20%; */
+    /* display: block; */
+    /* flex: 1; */
+    position: relative;
+    display: inline-block;
+    background-color: #146C94;
+    min-height: 100%;
+    // height: 100%;
+    align-items: center;
+    padding: 20px;
+    overflow: auto;
+    // width: 100%;
     
-//     .menu-button:hover {
-//         background-color: #869ba5;
-//         cursor: pointer;
-//     }
-    
-//     .homepage {
-//         background-color: #146C94;
-//         border: none;
-//         color: white;
-//     }
-//     .homepage:hover {
-//         cursor: pointer;
-//     }
-// }
+}
+
+.menu-button-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    // width: 100%;
+    margin: 0;
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // -ms-transform: translate(-50%, -50%);
+    // transform: translate(-50%, -50%);
+
+    position: fixed;
+    margin-left: -10px;
+    margin-top: 120px;
+}
+.menu-button {
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: 100%;
+    white-space: nowrap;
+    border: 2px;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #146C94;
+    color:white;
+    font-weight: bold;
+    transition: 0.3s;
+}
+.logo {
+    display: flex;
+    justify-content: space-evenly;
+}
+.logo:hover {
+    cursor: pointer;
+}
+.logo-image {
+    vertical-align: middle;
+}
+
+.menu-button:hover {
+    background-color: #869ba5;
+    cursor: pointer;
+}
+
+.homepage {
+    background-color: #146C94;
+    border: none;
+    color: white;
+}
+.homepage:hover {
+    cursor: pointer;
+}
 
 //-------------------------------------------------------------------------
 
@@ -124,74 +132,74 @@
 //===============================================
 
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
+// * {
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: border-box;
+//     text-decoration: none;
     
-}
-.menu-bar {
-    width: 250px;
-    /* display: block; */
-    /* flex: 1; */
-    position: fixed;
-    display: inline-block;
-    background-color: #146C94;
-    min-height: 100%;
-    align-items: center;
-    padding: 20px;
-    overflow: auto;
-    .homepage {
-        background-color: #146C94;
-        border: none;
-        color: white;
-    }
-    .homepage:hover {
-        cursor: pointer;
-    }
-    .menu-button-list {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        width: 100%;
-        margin: 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        .menu-button {
-            margin: auto;
-            margin-top: 15px;
-            margin-bottom: 15px;
-            width: 100%;
-            white-space: nowrap;
-            border: 2px;
-            border-radius: 5px;
-            padding: 10px;
-            background-color: #146C94;
-            // font-weight: bold;
-            font-size: larger;
-            transition: 0.3s;
-            a{
-                color:white;
-            }
-        }
-        .menu-button:hover {
-            background-color: #869ba5;
-        }
-    }
-    .logo {
-        display: flex;
-        justify-content: space-between;
-    }
-    .logo:hover {
-        cursor: pointer;
-    }
-    .logo-image {
-        vertical-align: middle;
-    }
+// }
+// .menu-bar {
+//     width: 250px;
+//     /* display: block; */
+//     /* flex: 1; */
+//     position: fixed;
+//     display: inline-block;
+//     background-color: #146C94;
+//     min-height: 100%;
+//     align-items: center;
+//     padding: 20px;
+//     overflow: auto;
+//     .homepage {
+//         background-color: #146C94;
+//         border: none;
+//         color: white;
+//     }
+//     .homepage:hover {
+//         cursor: pointer;
+//     }
+//     .menu-button-list {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: space-around;
+//         width: 100%;
+//         margin: 0;
+//         position: absolute;
+//         top: 50%;
+//         left: 50%;
+//         -ms-transform: translate(-50%, -50%);
+//         transform: translate(-50%, -50%);
+//         .menu-button {
+//             margin: auto;
+//             margin-top: 15px;
+//             margin-bottom: 15px;
+//             width: 100%;
+//             white-space: nowrap;
+//             border: 2px;
+//             border-radius: 5px;
+//             padding: 10px;
+//             background-color: #146C94;
+//             // font-weight: bold;
+//             font-size: larger;
+//             transition: 0.3s;
+//             a{
+//                 color:white;
+//             }
+//         }
+//         .menu-button:hover {
+//             background-color: #869ba5;
+//         }
+//     }
+//     .logo {
+//         display: flex;
+//         justify-content: space-between;
+//     }
+//     .logo:hover {
+//         cursor: pointer;
+//     }
+//     .logo-image {
+//         vertical-align: middle;
+//     }
     
-}
+// }
 
