--- a/src/app/components/admin-navigation/admin-navigation.component.scss
+++ b/src/app/components/admin-navigation/admin-navigation.component.scss
@@ -33,7 +33,7 @@
     // -ms-transform: translate(-50%, -50%);
     // transform: translate(-50%, -50%);
 
-    position: fixed;
+    // position: fixed;
     margin-left: -10px;
     margin-top: 120px;
 }
