--- a/src/app/pages/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="admin-nav">
         <app-admin-navigation></app-admin-navigation>
+        <!-- <app-admin-navi></app-admin-navi> -->
     </div>
     <div class="page-content">
         <router-outlet></router-outlet>
