--- a/src/app/pages/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/pages/admin-dashboard/admin-dashboard.component.scss
@@ -5,6 +5,9 @@
     display: flex;
     flex-direction: row;
     min-width: 100% !important;
+    margin: 0px !important;
+    padding: 0px !important;
+    min-height: 100% !important;
 }
 
 .admin-nav {
